ingress-rule/sbms/ingress-sbms-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sbms-resource
spec:
  rules:
  - host: one.sbms.com
    http:
      paths:
      - backend:
          serviceName: sbms-one-service
          servicePort: 80
  - host: two.sbms.com
    http:
      paths:
      - backend:
          serviceName: sbms-two-service
          servicePort: 80
